--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,13 @@ DJANGO_DEBUG=1
 # Separado por comas. Ej: localhost,127.0.0.1
 DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
 
+# Requerido en Django 4+ cuando sirves por HTTPS en un dominio
+# Separado por comas. Debe incluir el esquema https://
+DJANGO_CSRF_TRUSTED_ORIGINS=https://127.0.0.1,https://localhost
+
+# Pon 1 si estás detrás de un reverse proxy que termina TLS (Nginx, etc.)
+DJANGO_BEHIND_PROXY=0
+
 # MySQL
 MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
