Harden CSRF/session cookies for HTTPS

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,10 @@ DJANGO_COOKIE_DOMAIN=.seguridad.iagmexico.com
 # Pon 1 si estás detrás de un reverse proxy que termina TLS (Nginx, etc.)
 DJANGO_BEHIND_PROXY=0
 
+# Pon 1 para marcar cookies de sesión/CSRF como 'Secure' (HTTPS)
+# Nota: si DJANGO_BEHIND_PROXY=1, esto se activa automáticamente.
+DJANGO_SECURE_COOKIES=0
+
 # MySQL
 MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
